Upgrade JDK 18 -> 21